# engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  ENTITY_INSPECTOR_IMPLEMENTATION.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  README.md  _build_tmp.bat  build.bat  build.ps1  build_env.bat  build_err.txt  build_error.txt  build_error_transfer_sample.txt  build_log.txt  build_output.txt  compare.py  compile_shaders.bat  compile_shaders.sh  crash_log.txt  example_scene_usage.cpp  imgui.ini  original_main.cpp  patch.py  ralph_plan.md  rebuild_all.bat  render_test_architecture_plan.md  sample_stdout.txt  sample_telem_final.txt  sample_telem_final_v6.txt  sample_telem_final_v7.txt  sample_telem_v2.txt  sample_telem_v3.txt  sample_telem_v5.txt  sample_telemetry.txt  staged.diff  staged_utf8.diff  sweep.py  (+6 more)
editor/: CMakeLists.txt
editor/resources/: editor.qrc
editor/src/: asset_browser.cpp  asset_browser.hpp  asset_field_widget.cpp  asset_field_widget.hpp  asset_item_delegate.cpp  asset_item_delegate.hpp  asset_item_model.cpp  asset_item_model.hpp  breadcrumb_bar.cpp  breadcrumb_bar.hpp  console_panel.cpp  console_panel.hpp  editor_state.cpp  editor_state.hpp  entity_icons.cpp  entity_icons.hpp  game_view_widget.cpp  game_view_widget.hpp  hierarchy_panel.cpp  hierarchy_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  main.cpp  main_window.cpp  main_window.hpp  thumbnail_cache.cpp  thumbnail_cache.hpp  thumbnail_generator.cpp  thumbnail_generator.hpp  viewport_widget.cpp  viewport_widget.hpp
engine/: CMakeLists.txt
engine/achievements/: CMakeLists.txt
engine/achievements/src/: achievement_definition.cpp  achievement_manager.cpp
engine/achievements/tests/: CMakeLists.txt  test_achievement_builder.cpp  test_achievement_definition.cpp  test_achievement_manager.cpp  test_achievement_registry.cpp
engine/ai/: CMakeLists.txt
engine/ai/src/: ai_systems.cpp  behavior_tree.cpp  blackboard.cpp  bt_nodes.cpp  perception.cpp
engine/ai/tests/: CMakeLists.txt  test_ai_components.cpp  test_behavior_tree.cpp  test_blackboard.cpp  test_perception.cpp
engine/app/: CMakeLists.txt
engine/app/src/: application.cpp
engine/asset/: CMakeLists.txt
engine/asset/src/: asset_registry.cpp  audio_loader.cpp  dds_loader.cpp  fbx_importer.cpp  gltf_importer.cpp  hot_reload.cpp  importer.cpp  ktx_loader.cpp  manager.cpp  material_loader.cpp  obj_importer.cpp  prefab_loader.cpp  scene_loader.cpp  shader_compiler.cpp  streaming.cpp
engine/asset/tests/: CMakeLists.txt  test_asset_handle.cpp  test_asset_manager.cpp  test_asset_registry.cpp  test_asset_types.cpp
engine/audio/: CMakeLists.txt
engine/audio/src/: audio_component_registration.cpp  audio_components.cpp  audio_engine.cpp  audio_system.cpp  miniaudio_impl.cpp
engine/audio/tests/: CMakeLists.txt  audio_3d_test.cpp  audio_manual_test.cpp  test_audio_components.cpp  test_audio_engine.cpp  test_sound.cpp
engine/cinematic/: CMakeLists.txt
engine/cinematic/src/: animation_track.cpp  audio_track.cpp  camera_track.cpp  event_track.cpp  light_track.cpp  player.cpp  postprocess_track.cpp  sequence.cpp  track.cpp
engine/cinematic/tests/: CMakeLists.txt  test_sequence.cpp  test_track.cpp
engine/combat/: CMakeLists.txt
engine/combat/src/: combat_systems.cpp  damage.cpp  hit_reaction.cpp  hitbox.cpp
engine/combat/tests/: CMakeLists.txt  test_attack_phases.cpp  test_damage.cpp  test_hitbox.cpp  test_hurtbox.cpp  test_iframe.cpp
engine/companion/src/: companion.cpp  companion_ai.cpp  party_manager.cpp
engine/companion/tests/: CMakeLists.txt  test_companion_ai.cpp  test_companion_component.cpp  test_formation.cpp  test_party_manager.cpp
engine/core/: CMakeLists.txt
engine/core/src/: allocators.cpp  application.cpp  event_dispatcher.cpp  file_watcher.cpp  filesystem.cpp  game_events.cpp  input.cpp  input_buffer.cpp  job_system.cpp  log.cpp  math.cpp  platform_window.cpp  profiler.cpp  project_settings.cpp  scene_transition.cpp  serialize.cpp  time.cpp  time_manager.cpp  timer.cpp  uuid.cpp  wayland_window.cpp  win32_window.cpp  x11_window.cpp
engine/core/tests/: CMakeLists.txt  string_hash_uuid_test.cpp  test_event_dispatcher.cpp  test_input_buffer.cpp  test_job_system.cpp  test_math.cpp  test_timer.cpp
engine/data/: CMakeLists.txt
engine/data/src/: data_table.cpp
engine/data/tests/: CMakeLists.txt  test_data_table.cpp  test_data_table_manager.cpp  test_data_value.cpp
engine/debug-gui/: CMakeLists.txt
engine/debug-gui/shaders/: fs_imgui.sc
engine/debug-gui/src/: debug_console.cpp  debug_entity_inspector.cpp  debug_gui_manager.cpp  debug_profiler.cpp  imgui_layer.cpp
engine/debug-gui/tests/: CMakeLists.txt  test_debug_profiler.cpp  test_debug_window.cpp
engine/dialogue/: CMakeLists.txt
engine/dialogue/src/: dialogue_graph.cpp  dialogue_player.cpp  dialogue_systems.cpp
engine/dialogue/tests/: CMakeLists.txt  test_dialogue_components.cpp  test_dialogue_graph.cpp  test_dialogue_node.cpp
engine/effects/: CMakeLists.txt
engine/effects/src/: effect_component.cpp  effect_definition.cpp  effect_instance.cpp  effect_manager.cpp  effect_registration.cpp
engine/effects/tests/: CMakeLists.txt  test_effect_component.cpp  test_effect_definition.cpp  test_effect_instance.cpp
engine/environment/: CMakeLists.txt
engine/environment/src/: environment_lighting.cpp  environment_registration.cpp  environment_systems.cpp  sky_controller.cpp  weather.cpp  (+3 more)
engine/gameplay/: CMakeLists.txt
engine/inventory/: CMakeLists.txt
engine/localization/: CMakeLists.txt
engine/navigation/: CMakeLists.txt
engine/physics/: CMakeLists.txt
engine/plugin/: CMakeLists.txt
engine/quest/: CMakeLists.txt
engine/reflect/: CMakeLists.txt
engine/render/: CMakeLists.txt
engine/save/: CMakeLists.txt
engine/scene/: CMakeLists.txt
engine/script/: CMakeLists.txt
engine/settings/: CMakeLists.txt
engine/spline/: CMakeLists.txt
engine/stats/: CMakeLists.txt
engine/streaming/: CMakeLists.txt
engine/terrain/: CMakeLists.txt
engine/ui/: CMakeLists.txt
engine/vegetation/: CMakeLists.txt
(+944 files in other folders)
